--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,16 @@
+.list {
+    width: 49%;
+    height: 100%;
+    display: inline-block;
+}
+
+.edit {
+    width: 50%;
+    height: 100%;
+    display: inline-block;
+    position: sticky;
+}
+
 #ddl {
     width: 250px;
     border: 1px solid black;
@@ -34,15 +47,15 @@
     display: none;
 }
 
-#components span > h3 {
+.edit details > h3 {
     display: inline;
 }
 
-#components span > h3 > a {
+.edit details > h3 > a {
     text-decoration: none;
     color: black;
 }
 
-#components > span {
+.edit > details {
     display: block;
 }
