--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,15 @@
 .list {
-    width: 49%;
+    width: 46%;
     height: 100%;
     display: inline-block;
+    vertical-align: top;
+    padding-right: 3%;
 }
 
 .edit {
     width: 50%;
     height: 100%;
     display: inline-block;
-    position: sticky;
 }
 
 #ddl {
